<resources>
    <string name="app_name">Tatayab</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">LOG IN</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="ForgotPaswrd">Forgot Password ?</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_category">Category</string>
    <string name="title_concierge">Concierge</string>
    <string name="title_Profile">Profile</string>
    <string name="title_Cart">Cart</string>
</resources>

