<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/homeicon"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_category"
        android:icon="@drawable/icon_category"
        android:title="@string/title_category" />

    <item
        android:id="@+id/navigation_concierge"
        android:icon="@drawable/icon_concierge"
        android:title="@string/title_concierge" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/icon_user"
        android:title="@string/title_Profile" />
    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/icon_cart"
        android:title="@string/title_Cart" />

</menu>
