<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.tatayab.tatayab.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_category"
        android:name="com.tatayab.tatayab.ui.category.CategoryFragment"
        android:label="@string/title_category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/navigation_concierge"
        android:name="com.tatayab.tatayab.ui.concierge.ConciergeFragment"
        android:label="@string/title_concierge"
        tools:layout="@layout/fragment_concierge" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.tatayab.tatayab.ui.profile.ProfileFragment"
        android:label="@string/title_Profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.tatayab.tatayab.ui.category.CategoryFragment"
        android:label="@string/title_category"
        tools:layout="@layout/fragment_category" />


</navigation>